@@ -12,11 +12,23 @@ functions:                                           C code/     can be used in:
         lcd_hd44780_write_data_8bit                     M                   *
         lcd_hd44780_write_data                          M           *       *
         ---
+        lcd_hd44780_set_DD_RAM_address_4bit             C           *       
+        lcd_hd44780_set_DD_RAM_address                  M           *       (2)
+        ---
+        lcd_hd44780_clear_display_4bit                  C           *       
+        lcd_hd44780_clear_display                       M           *       (2)
+        ---
+        lcd_hd44780_return_home_4bit                    C           *       
+        lcd_hd44780_return_home                         M           *       (2)
     highlevel:
         lcd_init                                        C           *       *
         lcd_putc                                        C           *       *
         lcd_puts                                        C           *       *
         lcd_print                                       M           *       *
+        lcd_goto_xy                                     C           *       (2)
+        lcd_return_home                                 M           *       (2)
+        lcd_clear_display                               M           *       (2)
 
 _______________________________
 (1) can be used only during initialization
+(2) not implemented yet
